--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "license": "MIT",
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/cli.js",
+  "bin": {
+    "generative-ui-demo": "dist/cli.js"
+  },
   "scripts": {
     "start": "npx -y tsx src/cli.tsx"
   },
